TEST_PROGRAMS/VALID/05/top_var_bool_single_no_init_type.go
/* Types. */

package main
   
var c bool
   
func main() {
	//x = 1
}
