TEST_PROGRAMS/INVALID/05/empty_rune.go
/* Empty rune. */

package main

func main() {
	var r rune = '' // Error: Can't have an empty rune.
}
